# 2018XJTU_RM_INFANTRY_CODE

./: LICENSE  README.md
models/big/: _iter_10000.caffemodel  _iter_5000.caffemodel  lenet3.prototxt  mean.binaryproto
models/small/: mynet_iter_10000.caffemodel
my_code_data/: big_scope_camera_data.xml  bubing.cpp  small_scope_camera_data.xml
my_code_data/data/data1/: lenet_iter_10000.caffemodel
my_code_data/data/data3/: label.txt  lenet.prototxt  lenet_iter_10000.caffemodel
opencvtest3/: AngleSolver.cpp  CMakeLists.txt  classfication.cpp  package.xml
opencvtest3/include/: AngleSolver.hpp  Infantrymode.h  caffe_head.h  classfication.h  wifi_buff.h
opencvtest3/src/: bubing.cpp  wifi_send.cpp  wifi_talker.cpp
serial_common/: CMakeLists.txt  opencv.launch  package.xml
serial_common/include/: serial_common_node.h
serial_common/include/serial_common/: EnemyPos.h
serial_common/msg/: EnemyPos.msg  Infantrymode.msg  wifi_buff.msg
serial_common/src/: serial_common_node.cpp
usb_cam/: opencv.launch  usb_cam_test.launch
usb_cam/launch/: usb_cam-test.launch
usb_cam/nodes/: usb_cam_node.cpp
